@@ -18,7 +18,7 @@
             "rct2.scenery_small.titc",
             "fidwell.scenery_small.titc",
             "rct2.scenery_small.tghc",
-            "$DAT:00000002|GWTRGHC ",
+            "fidwell.scenery_small.tghc",
             "rct2.scenery_small.tac",
             "fidwell.scenery_small.tac",
             "rct2.scenery_small.tghc2",
