@@ -18,6 +18,7 @@
 - Fixed object: Arizona Cypress Tree (rct2.scenery_small.tac)
 - Fixed object: Monkey-Puzzle Tree (rct2.scenery_small.tmp)
 - Fixed object: Italian Cypress Tree (rct2.scenery_small.titc)
+- Fixed object: Golden Hinoki Cypress Tree (rct2.scenery_small.tghc)
 - Fixed object: Bush (rct2.scenery_small.tsh0)
 - Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
 - Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
